web/sass/styles.sass
@charset "utf-8"

// Custom colors
$coral:    #FF6F61
$seafoam: #2AB573

$primary:    $coral
$link: $seafoam

@import "./bulma/sass/utilities/initial-variables"

$scheme-main: $black
$scheme-main-bis: $black-bis
$scheme-main-ter: $black-ter
$scheme-invert: $white
$scheme-invert-bis: $white-bis
$scheme-invert-ter: $white-ter

$background: $black-ter

$text: $grey-light
$text-strong: $grey-lighter

/*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
@import "./bulma/sass/utilities/_all"
@import "./bulma/sass/base/_all"
@import "./bulma/sass/elements/_all"
@import "./bulma/sass/form/_all"
@import "./bulma/sass/components/_all"
@import "./bulma/sass/grid/_all"
@import "./bulma/sass/layout/_all"

.content
  h1,
  h2,
  h3,
  h4,
  h5,
  h6
    font-family: cholla-slab, serif
    color: $primary

.patreon-link
  img
    height: 2em
    max-height: none
    border-radius: 1em

.twitch-button
  background-color: #9146FF
  img
    width: 83px
    height: 25px
    vertical-align: text-bottom

.login
  text-align: center

  p
    text-align: left

#glcanvas
  position: fixed
  left: 0
  top: 0
  right: 0
  bottom: 0
  width: 100%
  height: 100%
  z-index: 1

#app
  position: fixed
  left: 0
  top: 0
  right: 0
  bottom: 0
  width: 100%
  height: 100%
  z-index: 2

